# seo-ai-agent

./: README.md  SQL Queris.sql  pyproject.toml  test data.txt
backend/: .gitignore  pyproject.toml
backend/app/: celery_config.py  config.py  crud.py  database.py  main.py  models.py  prompts.py  schemas.py  tasks.py
backend/app/agents/: writer_editor_agent.py
backend/app/services/: entity_service.py  nlp_service.py  scraper_service.py  serp_service.py
backend/app/static/: index.html
frontend/: index.html
